Update the English source comments

--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_MEDIA=\u0627\u0644\u0648\u0633\u0627\u0626\u0637
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=\u0645\u0634\u0627\u0647\u062f\u0629
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 #? DOWNLOAD_LAUNCH_BUTTON_TIP=
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=\u0625\u0646\u0647\u0627\u0621 \u0627\u0644\u062a\u0646\u0632\u064a\u0644
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=\u0625\u0639\u0627\u062f\u0629 \u062a\u062d\u0645\u06
 LIBRARY_EXPLORE_BUTTON_LABEL=\u0627\u0633\u062a\u0643\u0634\u0627\u0641
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 LIBRARY_EXPLORE_BUTTON_TIP=\u0641\u062a\u062d \u0645\u062c\u0644\u062f \u0627\u0644\u0645\u0643\u062a\u0628\u0629.
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=\u0625\u0644\u0649 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=\u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062e\u062a\u0627\u0631\u0629 \u0625\u0644\u0649 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=\u062a\u0648\u062b\u064a\u0642...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=\u062a\u0648\u062b\u064a\u0642...
 LIBRARY_ANNOTATE_BUTTON_TIP=\u062a\u0648\u062b\u064a\u0642 \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0645\u062e\u062a\u0627\u0631.
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=\u0625\u064a\u0642\u0627\u0641 \u0645\u0624\u0642\u062a
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u0627\u0633\u062a\u0623\u0646\u0641 \u062a\u0646\u0632\u064a\u0644 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062e\u062a\u0627\u0631\u0629 \u0627\u0644\u063a\u064a\u0631 \u0643\u0627\u0645\u0644\u0629.
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u0641\u062a\u062d...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=\u0641\u062a\u062d \u0642\u0627\u0626\u0645\u0629 \u0642\u0631\u0627\u0621\u0629 \u062c\u062f\u064a\u062f\u0629 \u0623\u0648 \u0645\u0648\u062c\u0648\u062f\u0629 \u0645\u0633\u0628\u0642\u0627.
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=\u062d\u0641\u0638...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=\u062d\u0641\u0638 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629 \u0627\u0644\u062d\u0627\u0644\u064a\u0629.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=\u062d\u0630\u0641
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=\u062d\u0630\u0641 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062e\u062a\u0627\u0631\u0629 \u0645\u0646 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=\u0645\u0644\u0641\u0627\u062a \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629 (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=\u062a\u0634\u063a\u064a\u0644.
 MEDIA_PAUSE_BUTTON_TIP=\u0625\u064a\u0642\u0627\u0641 \u0645\u0624\u0642\u062a.
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=\u0625\u064a\u0642\u0627\u0641.
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=\u062a\u0642\u062f\u064a\u0645.
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=\u0625\u0631\u062c\u0627\u0639.
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%/\u0627\u0644\u062d\u062c\u0645)
 #? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=\u0625\u0632\u0627\u0644\u0629
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=\u0625\u0632\u0627\u0644\u0629 \u0627\u0644\u0627\u062a\u0635\u0627\u0644\u0627\u062a \u0627\u0644\u0645\u062e\u062a\u0627\u0631\u0629
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=\u0625\u0636\u0627\u0641\u0629
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=\u0625\u0646\u0634\u0627\u0621 \u0627\u062a\u0635\u0627\u0644 \u062e\u0627\u0631\u062c\u064a \u062c\u062f\u064a\u062f
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=\u0627\u062d\u062a\u0641\u0638 \u062a\u0642\u0631\u064a\u0628\u0627 \u0628 
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=\u0645\u062c\u0644\u062f \u062c\u062f\u064a\u062f
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=\u0625\u064a\u0642\u0627\u0641 \u0627\u0644\u0645\u0634\u0627\u0631\u0643\u0629
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=\u0625\u0639\u0627\u062f\u0629 \u062a\u0633\u0645\u064a\u0629
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=\u0625\u0644\u0649 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 #? LIBRARY_TREE_SAVED_DIRECTORY=
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=\u0643\u062a\u0627\u0628\u0629 \u0639\u0644\u0649 \u0642\u063
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 \u0642\u0627\u0626\u0645\u0629 \u0642\u0631\u0627\u0621\u0629
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=\u0627\u0644\u0627\u0633\u0645
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=\u062e\u064a\u0627\u0631\u0627\u062a \u0627\u0644\u062a\
 PLAYLIST_OPTIONS_CONTINUE=\u0645\u062a\u0635\u0644
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=\u062a\u0628\u062f\u064a\u0644
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=\u0627\u062e\u062a\u0631 \u0642\u0627\u0626\u0645\u0629 \u0642\u0631\u0627\u0621\u0629 (*.m3u)
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=\u062d\u0641\u0638 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629 \u0628\u0627\u0633\u0645
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=\u062d\u0641\u0638
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 PLAYLIST_CANNOT_PLAY_FILE=\u0644\u0627 \u064a\u062a\u0645\u0643\u0646 LimeWire \u0645\u0646 \u062a\u0634\u063a\u064a\u0644 \u0627\u0644\u0645\u0644\u0641.
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 PLAYLIST_FILE_UNSUPPORTED=.\u0646\u0648\u0639 \u0627\u0644\u0645\u0644\u0641 \u063a\u064a\u0631 \u0648\u0627\u0636\u062d.
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=\u064a\u062a\u0645 \u0627\u0644\u0622\u0646 \u06
 SPLASH_STATUS_STATISTICS_WINDOW=\u064a\u062a\u0645 \u0627\u0644\u0622\u0646 \u062a\u062d\u0645\u064a\u0644 \u0646\u0627\u0641\u0630\u0629 \u0627\u0644\u0625\u062d\u0635\u0627\u0626\u064a\u0627\u062a...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=\u064a\u062a\u0645 \u0627\u0644\u0622\u0646 \u062a\u062d\u0645\u064a\u0644 \u0646\u0627\u0641\u0630\u0629 \u0625\u0638\u0647\u0627\u0631 \u0627\u0644\u062d\u0627\u0644\u0629...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=\u064a\u062a\u0645 \u0627\u0644\u0622\u0646 \u062a\u062d\u0645\u064a\u0644 \u0646\u0627\u0641\u0630\u0629 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=\u064a\u062a\u0645 \u0627\u0644\u0622\u0646 \u062a\u062d\u0645\u064a\u0644 \u0627\u0644\u0642\u0648\u0627\u0626\u0645...
