--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_MEDIA=Medien
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Vorschau
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 DOWNLOAD_LAUNCH_BUTTON_TIP=Eine Vorschau des ausgewählten Downloads anzeigen.
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Abbrechen
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=Lädt die Liste der öffentlichen Dateien neu.
 LIBRARY_EXPLORE_BUTTON_LABEL=Durchsuchen
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 LIBRARY_EXPLORE_BUTTON_TIP=Öffnet Dateisammlungsverzeichnis.
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=zur PlayList
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=Fügt die ausgewählten Dateien zur PlayList hinzu.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=Kommentieren...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Kommentieren...
 LIBRARY_ANNOTATE_BUTTON_TIP=Die ausgewählte Datei kommentieren.
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=Fortsetzen
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Download der unvollständigen Datei fortsetzen.
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Öffnen...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=Öffnet eine neue oder bereits vorhandene PlayList
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=Speichern...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=Speichert die aktuelle PlayList.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=Löschen
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=Löscht die ausgewählte Datei aus der PlayList.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=PlayList Dateien (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=Start
 MEDIA_PAUSE_BUTTON_TIP=Pause
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=Stop
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=Weiter
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=Zurück
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%/Größe)
 CV_COLUMN_QRP_USED=QRP leer
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=Entfernen
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=Beendet die ausgewählten Verbindungen.
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=Hinzufügen
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=Stellt eine neue ausgehende Verbindung her.
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=Ca.
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=Neues Verzeichnis
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Freigabe sperren
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Umbenennen
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Zur PlayList
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 LIBRARY_TREE_SAVED_DIRECTORY=Gespeicherte Dateien
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=CD brennen...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 PlayList
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=Name
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=Abspiel-Optionen:
 PLAYLIST_OPTIONS_CONTINUE=Kontinuierlich
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=Zufall
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=PlayList (.m3u) auswählen
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=PlayList speichern unter...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=Speichern
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 PLAYLIST_CANNOT_PLAY_FILE=LimeWire konnte diese Datei nicht spielen:
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 PLAYLIST_FILE_UNSUPPORTED=. Dieser Datei-Typ ist nicht bekannt.
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=Verbindungsfenster wird geladen...
 SPLASH_STATUS_STATISTICS_WINDOW=Statistikfenster wird geladen...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=Statusfenster wird geladen...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=PlayList-fenster wird geladen...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=Menüs werden geladen...
