--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_MEDIA=Media
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Ind\u00edt\u00e1sa
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 DOWNLOAD_LAUNCH_BUTTON_TIP=Kiv\u00e1lasztott let\u00f6lt\u00e9s ind\u00edt\u00e1sa.
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Let\u00f6lt\u00e9s le\u00e1ll\u00edt\u00e1sa
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=Osztott k\u00f6nyvt\u00e1rak visszat\u00f6lt\u00e9se.
 #? LIBRARY_EXPLORE_BUTTON_LABEL=
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 #? LIBRARY_EXPLORE_BUTTON_TIP=
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=Lej\u00e1tsz\u00f3list\u00e1hoz
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=Kiv\u00e1lasztott fileok hozz\u00e1ad\u00e1sa a lej\u00e1tsz\u00f3list\u00e1hoz.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=Megjel\u00f6l\u00e9s...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Megjel\u00f6l\u00e9s...
 LIBRARY_ANNOTATE_BUTTON_TIP=Kiv\u00e1lasztott file megjel\u00f6l\u00e9se.
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 #? LIBRARY_RESUME_BUTTON_LABEL=
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 #? LIBRARY_RESUME_BUTTON_TIP=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Megnyit\u00e1s...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=Egy \u00faj vagy l\u00e9tez\u0151 lej\u00e1tsz\u00f3lista megnyit\u00e1sa.
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=Ment\u00e9s...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=Az aktu\u00e1lis lej\u00e1tsz\u00f3lista ment\u00e9se.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=Elt\u00e1vol\u00edt\u00e1s
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=Kiv\u00e1lasztott fileok elt\u00e1vol\u00edt\u00e1sa a lej\u00e1tsz\u00f3list\u00e1b\u00f3l.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=Lej\u00e1tsz\u00f3lista (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAYER_DEFAULT_STRING=LimeWire media lej\u00e1tsz\u00f3
 #? MEDIA_PAUSE_BUTTON_TIP=
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=Stop
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=K\u00f6vetkez\u0151
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=Vissza
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%/m\u00e9ret)
 #? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=Elt\u00e1vol\u00edt
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=Kiv\u00e1lasztott kapcsolatok elt\u00e1vol\u00edt\u00e1sa.
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=Hozz\u00e1ad
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=\u00daj kimen\u0151 kapcsolat l\u00e9trehoz\u00e1sa.
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=Hozz\u00e1vet\u0151leges kapcsolatok
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=\u00daj folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Megoszt\u00e1s le\u00e1ll\u00edt\u00e1sa
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=\u00c1tnevez\u00e9s
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Lej\u00e1tsz\u00f3list\u00e1ba
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 #? LIBRARY_TREE_SAVED_DIRECTORY=
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=CD \u00edr\u00e1s...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 lej\u00e1tsz\u00f3lista
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=N\u00e9v
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=Lej\u00e1tsz\u00e1s be\u00e1ll\u00edt\u00e1sok:
 PLAYLIST_OPTIONS_CONTINUE=Folyamatos
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=Kevert
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=Lej\u00e1tsz\u00f3lista v\u00e1laszt\u00e1s (.m3u)
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=Lej\u00e1tsz\u00f3lista ment\u00e9se, mint...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=Ment\u00e9s
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 #? PLAYLIST_CANNOT_PLAY_FILE=
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 #? PLAYLIST_FILE_UNSUPPORTED=
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=Kapcsolatablak t\u00f6lt\u00e9se...
 SPLASH_STATUS_STATISTICS_WINDOW=Statisztikaablak t\u00f6lt\u00e9se...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=St\u00e1tuszablak t\u00f6lt\u00e9se...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=lej\u00e1tsz\u00f3listaablak t\u00f6lt\u00e9se...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=Men\u00fck t\u00f6lt\u00e9se...
