--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_MEDIA=\u30e1\u30c7\u30a3\u30a2
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=\u30d7\u30ec\u30d3\u30e5\u30fc
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 DOWNLOAD_LAUNCH_BUTTON_TIP=\u9078\u629e\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u30d7\u30ec\u30d3\u30e5\u30fc\u3059\u308b
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u505c\u6b62
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=\u5171\u6709\u30d5\u30a9\u30eb\u30c0\u3092\u66f4\u65b
 LIBRARY_EXPLORE_BUTTON_LABEL=\u53c2\u7167
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 LIBRARY_EXPLORE_BUTTON_TIP=\u30e9\u30a4\u30d6\u30e9\u30ea\u30d5\u30a9\u30eb\u30c0\u3092\u958b\u304f
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=\u518d\u751f\u30ea\u30b9\u30c8\u3078
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=\u9078\u629e\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u3092\u518d\u751f\u30ea\u30b9\u30c8\u3078\u8ffd\u52a0\u3059\u308b
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=\u30b3\u30e1\u30f3\u30c8...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=\u30b3\u30e1\u30f3\u30c8...
 LIBRARY_ANNOTATE_BUTTON_TIP=\u9078\u629e\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u306b\u30b3\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3059\u308b
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=\u30ec\u30b8\u30e5\u30fc\u30e0
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u30ec\u30b8\u30e5\u30fc\u30e0\u3059\u308b
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u958b\u304f...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=\u65b0\u898f/\u65e2\u5b58\u306e\u518d\u751f\u30ea\u30b9\u30c8\u3092\u958b\u304f...
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=\u4fdd\u5b58...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=\u73fe\u5728\u306e\u518d\u751f\u30ea\u30b9\u30c8\u3092\u4fdd\u5b58...
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=\u9664\u53bb
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=\u9078\u629e\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u3092\u518d\u751f\u30ea\u30b9\u30c8\u304b\u3089\u9664\u53bb\u3059\u308b
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=\u518d\u751f\u30ea\u30b9\u30c8\u30d5\u30a1\u30a4\u30eb (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=\u518d\u751f\u3059\u308b
 MEDIA_PAUSE_BUTTON_TIP=\u4e00\u6642\u505c\u6b62\u3059\u308b
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=\u505c\u6b62
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=\u65e9\u9001\u308a\u3059\u308b
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=\u5dfb\u304d\u623b\u3057\u3059\u308b
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%)
 CV_COLUMN_QRP_USED=QRP \u7a7a\u304d
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=\u9664\u53bb
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=\u9078\u629e\u3057\u305f\u30db\u30b9\u30c8\u3092\u9664\u53bb\u3059\u308b
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=\u8ffd\u52a0
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=\u65b0\u898f\u306b\u5916\u5411\u304d\u306e\u63a5\u7d9a\u3092\u78ba\u7acb\u3059\u308b
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=\u304a\u3088\u305d
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=\u5171\u6709\u3092\u505c\u6b62
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=\u540d\u79f0\u5909\u66f4
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=\u518d\u751f\u30ea\u30b9\u30c8\u3078
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 LIBRARY_TREE_SAVED_DIRECTORY=\u4fdd\u5b58\u3055\u308c\u305f\u30d5\u30a1\u30a4\u30eb
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=CD \u3092\u4f5c\u6210...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 \u518d\u751f\u30ea\u30b9\u30c8
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=\u540d\u524d
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=\u518d\u751f\u30aa\u30d7\u30b7\u30e7\u30f3\uff1a
 PLAYLIST_OPTIONS_CONTINUE=\u9023\u7d9a
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=\u30b7\u30e3\u30c3\u30d5\u30eb
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=\u518d\u751f\u30ea\u30b9\u30c8\u3092\u9078\u629e (.m3u)
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=\u518d\u751f\u30ea\u30b9\u30c8\u3092\u5225\u540d\u3067\u4fdd\u5b58...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=\u4fdd\u5b58
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 PLAYLIST_CANNOT_PLAY_FILE=\u30d5\u30a1\u30a4\u30eb\u3092\u518d\u751f\u3067\u304d\u307e\u305b\u3093
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 PLAYLIST_FILE_UNSUPPORTED=\u30d5\u30a1\u30a4\u30eb\u5f62\u5f0f\u3092\u8a8d\u8b58\u3067\u304d\u307e\u305b\u3093\u3002
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=Loading connection window...
 SPLASH_STATUS_STATISTICS_WINDOW=Loading statistics window...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=Loading status window...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=Loading menus...
