--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.2.4
 # Specialization for: Russian - Russia
-# Translated by Eugene Romanenko (eros2 AT os2.ru)
+# Translated by Eugene Romanenko <eros2@os2.ru>
 ################################################################################
 LOCALE_LANGUAGE_CODE=ru
 LOCALE_LANGUAGE_NAME=\u0420\u0443\u0441\u0441\u043a\u0438\u0439
@@ -1201,7 +1201,7 @@ PLAYLIST_DIALOG_OPEN_TITLE=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u04
 PLAYLIST_DIALOG_SAVE_TITLE=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u043f\u043b\u0435\u0439\u043b\u0438\u0441\u0442 \u043a\u0430\u043a...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file.
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 PLAYLIST_CANNOT_PLAY_FILE=LimeWire \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u043e\u0438\u0433\u0440\u0430\u0442\u044c \u0444\u0430\u0439\u043b
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 PLAYLIST_FILE_UNSUPPORTED=. \u041d\u0435\u0440\u0430\u0441\u043f\u043e\u0437\u043d\u0430\u043d\u043d\u044b\u0439 \u0442\u0438\u043f \u0444\u0430\u0439\u043b\u0430.
