--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_OPTIONS=Asetukset
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Esikatsele
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 #? DOWNLOAD_LAUNCH_BUTTON_TIP=
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Lopeta lataus
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=Lataa uudelleen jaetut hakemistot.
 LIBRARY_EXPLORE_BUTTON_LABEL=Selaa
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 LIBRARY_EXPLORE_BUTTON_TIP=Avaa kirjasto hakemisto.
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=Soittolistalle
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=Lis‰‰ valitut tiedostot soittolistalle.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=Liit‰...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Liit‰...
 LIBRARY_ANNOTATE_BUTTON_TIP=Liit‰ valitut tiedostot.
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=Jatka
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Jatka keskeytyneit‰ latauksia.
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Avaa...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=Avaa tai tee uusi soittolista.
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=Tallenna...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=Tallenna avoin soittolista.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=Poista
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=Poista valitut tiedostot soittolistalta.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=Soittolista tiedostot (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=Soita
 MEDIA_PAUSE_BUTTON_TIP=Tauko
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=Stop
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=Eteenp‰in
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=Taaksep‰in
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%/koko)
 #? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=Poista
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=Poista valitut yhteydet.
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=Lis‰‰
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=Luo uusi ulkopuolinen yhteys.
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=Pid‰ keskim‰‰rin
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=Uusi hakemisto
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Lopeta jako
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Nime‰ uudelleen
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Soittolistalle
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 #? LIBRARY_TREE_SAVED_DIRECTORY=
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=Polta CD...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 Soittolista
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=Nimi
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=Soitto asetukset:
 PLAYLIST_OPTIONS_CONTINUE=Jatkuva
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=Sekoita
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=Valitse soittolista (.m3u)
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=Tallenna soittolista nimell‰...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=Tallenna
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 #? PLAYLIST_CANNOT_PLAY_FILE=
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 #? PLAYLIST_FILE_UNSUPPORTED=
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=Lataan yhteydet ikkunaa...
 SPLASH_STATUS_STATISTICS_WINDOW=Lataan statistiikka ikkunaa...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=Lataan status ikkunaa...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=Lataan soittolista ikkuna...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=Lataan valikkoja...
