--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_MEDIA=\u05de\u05d3\u05d9\u05d4
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=\u05ea\u05e6\u05d5\u05d2\u05d4 \u05de\u05e7\u05d3\u05d9\u05de\u05d4
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 DOWNLOAD_LAUNCH_BUTTON_TIP=\u05ea\u05e6\u05d5\u05d2\u05d4 \u05de\u05e7\u05d3\u05d9\u05de\u05d4 \u05e9\u05dc \u05d4\u05d4\u05d5\u05e8\u05d3\u05d5\u05ea \u05d4\u05e0\u05d9\u05d1\u05d7\u05e8\u05d5\u05ea.
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=\u05de\u05d7\u05d9\u05e7\u05ea \u05d4\u05d5\u05e8\u05d3\u05d4
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=\u05e2\u05dc\u05d4 \u05de\u05d7\u05d3\u05e9 \u05de\u0
 LIBRARY_EXPLORE_BUTTON_LABEL=\u05d7\u05e7\u05d5\u05e8
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 LIBRARY_EXPLORE_BUTTON_TIP=\u05e4\u05ea\u05d7 \u05de\u05d7\u05d9\u05e6\u05ea \u05d4\u05e1\u05d9\u05e4\u05e8\u05d9\u05d4.
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=\u05e0\u05d2\u05df \u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05e9\u05d9\u05e8\u05d9\u05dd
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=\u05d0\u05d5\u05e1\u05e3 \u05dc\u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05e9\u05d9\u05e8\u05d9\u05dd.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=\u05ea\u05d0\u05d5\u05e8...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=\u05ea\u05d0\u05d5\u05e8...
 #? LIBRARY_ANNOTATE_BUTTON_TIP=
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=\u05d4\u05e4\u05e2\u05dc \u05de\u05d7\u05d3\u05e9
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u05d4\u05de\u05e9\u05da \u05d4\u05d5\u05e8\u05d3\u05ea \u05d4\u05e7\u05d1\u05e6\u05d9\u05dd \u05e9\u05d8\u05e8\u05dd \u05e0\u05d2\u05de\u05e8.
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u05e4\u05ea\u05d7...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=\u05e4\u05ea\u05d7 \u05e8\u05e9\u05d9\u05de\u05d4 \u05d7\u05d3\u05e9\u05d4 \u05d0\u05d5 \u05e7\u05d9\u05d9\u05de\u05ea.
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=\u05e9\u05de\u05d5\u05e8...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=\u05e9\u05de\u05d5\u05e8 \u05e8\u05e9\u05d9\u05de\u05d4 \u05d4\u05e0\u05d5\u05db\u05d7\u05d9\u05ea.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=\u05de\u05d7\u05e7
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=\u05de\u05d7\u05e7 \u05d4\u05e7\u05d1\u05e6\u05d9\u05dd \u05d4\u05e8\u05e6\u05d5\u05d9\u05d9\u05dd \u05de\u05ea\u05d5\u05da \u05d4\u05e8\u05e9\u05d9\u05de\u05d4.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=\u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05e9\u05d9\u05e8\u05d9\u05dd (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=\u05e0\u05d2\u05df
 MEDIA_PAUSE_BUTTON_TIP=\u05d4\u05e4\u05e1\u05e7
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=\u05e2\u05e6\u05d5\u05e8
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=\u05dc\u05d4\u05e2\u05d1\u05d9\u05e8 \u05d4\u05dc\u05d0\u05d4
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=\u05dc\u05d4\u05d7\u05d6\u05d9\u05e8 \u05dc\u05d0\u05d7\u05d5\u05e8 
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_VENDOR=\u05e1\u05e4\u05e7 / \u05d2\u05d9\u05e8\u05e1\u05d4
 #? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 #? CV_BUTTON_REMOVE=
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 #? CV_BUTTON_TOOLTIP_REMOVE=
 #### CV_BUTTON_ADD=Add
 #? CV_BUTTON_ADD=
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 #? CV_BUTTON_TOOLTIP_ADD=
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 #? CV_LABEL_KEEP_BEGIN=
@@ -1165,7 +1165,7 @@ LIBRARY_TABLE_SIZE=\u05d2\u05d5\u05d3\u05dc
 #? LIBRARY_TREE_UNSHARE_FOLDER_LABEL=
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 #? LIBRARY_TREE_RENAME_FOLDER_LABEL=
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 #? LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 #? LIBRARY_TREE_SAVED_DIRECTORY=
@@ -1181,7 +1181,7 @@ LIBRARY_TABLE_SIZE=\u05d2\u05d5\u05d3\u05dc
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 #? PLAYLIST_TITLE=
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=\u05e9\u05dd
@@ -1195,13 +1195,13 @@ PLAYLIST_TABLE_NAME=\u05e9\u05dd
 #? PLAYLIST_OPTIONS_CONTINUE=
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 #? PLAYLIST_OPTIONS_SHUFFLE=
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 #? PLAYLIST_DIALOG_OPEN_TITLE=
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 #? PLAYLIST_DIALOG_SAVE_TITLE=
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 #? PLAYLIST_DIALOG_SAVE_SAVE=
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 #? PLAYLIST_CANNOT_PLAY_FILE=
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 #? PLAYLIST_FILE_UNSUPPORTED=
@@ -1513,7 +1513,7 @@ GENERAL_CHAT_BUTTON_TIP=\u05e9\u05d7\u05d7 \u05e2\u05dd \u05de\u05d0\u05e8\u05d7
 #? SPLASH_STATUS_STATISTICS_WINDOW=
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 #? SPLASH_STATUS_STATUS_WINDOW=
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 #? SPLASH_STATUS_PLAYLIST_WINDOW=
 #### SPLASH_STATUS_MENUS=Loading menus...
 #? SPLASH_STATUS_MENUS=
