--- a/lib/messagebundles/MessagesBundle_sl.properties
+++ b/lib/messagebundles/MessagesBundle_sl.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_OPTIONS=Mo\u017enosti
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Predogled
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 #? DOWNLOAD_LAUNCH_BUTTON_TIP=
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Kon\u010daj prenosi
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=Ponovno nalo\u017ei imenike, ki jih delite z drugimi.
 #? LIBRARY_EXPLORE_BUTTON_LABEL=
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 #? LIBRARY_EXPLORE_BUTTON_TIP=
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=K seznamu
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=Doda izbrano datoteko ali datoteke k seznamu za igranje.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=Dodatni podatki
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Dodatni podatki
 LIBRARY_ANNOTATE_BUTTON_TIP=Doda dodatne podatke datoteki.
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=Nadaljuj
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Nadaljuje s prenosom izbrane nedokon\u010dane datoteke ali datotek.
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Odpri...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=Odpre nov ali \u017ee obstoje\u010d seznam za igranje.
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=Shrani...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=Shrani trenutni seznam za igranje.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=Odstrani
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=Odstrani trenutni seznam za igranje.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=Seznami za igranje - Playliste (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=Igraj
 MEDIA_PAUSE_BUTTON_TIP=Za\u010dasno prenehaj z igranjem
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=Ustavi igranje
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=Naprej
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=Nazaj
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%/velikost)
 #? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=Odstrani
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=Odstrani izbrano povezavo ali povezave.
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=Dodaj
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=Ustvari novo izhodno povezavo.
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=Vselej ohranjaj
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=Nov imenik
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Prenehaj delitev z drugimi
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Preimenuj
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=K seznamu za igranje
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 #? LIBRARY_TREE_SAVED_DIRECTORY=
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=Napi\u0161i CD...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 seznam za igranje
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=Ime
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=Mo\u017enosti za igranje:
 PLAYLIST_OPTIONS_CONTINUE=Nepretrgano
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=Naklju\u010dno
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=Izberi seznam za igranje (.m3u)
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=Shrani seznam za igranje kot...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=Shrani
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 #? PLAYLIST_CANNOT_PLAY_FILE=
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 #? PLAYLIST_FILE_UNSUPPORTED=
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=Nalagam okno s povezavami...
 SPLASH_STATUS_STATISTICS_WINDOW=Nalagam okno s statistiko...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=Nalagam okno stanja...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=Nalagam okno z seznam za igranje...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=Nalagam menije...
