--- a/lib/messagebundles/MessagesBundle_sv.properties
+++ b/lib/messagebundles/MessagesBundle_sv.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_MEDIA=Media
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Förhandsvisa
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 #? DOWNLOAD_LAUNCH_BUTTON_TIP=
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Avbryt nedladdning
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=Uppdatera delade mappar.
 LIBRARY_EXPLORE_BUTTON_LABEL=Utforska
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 LIBRARY_EXPLORE_BUTTON_TIP=Öppna biblioteksmapp.
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=Till spellistan
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=Lägg till valda filer i spellistan.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=Kommentera...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Kommentera...
 LIBRARY_ANNOTATE_BUTTON_TIP=Kommentera vald fil.
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=Fortsätt
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 #? LIBRARY_RESUME_BUTTON_TIP=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Öppna...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=Öppna en ny eller existerande spellista.
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=Spara...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=Spara nuvarande spellista.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=Ta bort
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=Ta bort vald fil från spellistan.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=Spellista filer (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=Spela
 MEDIA_PAUSE_BUTTON_TIP=Vänta
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=Hejda
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=Nästa
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=Tillbaka
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%/storlek)
 #? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=Ta bort
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=Ta bort valda anslutningar.
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=Lägg till
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=Skapa en ny utgående anslutning.
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=Behåll ungefärligt
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=Ny mapp
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Avbryt delning
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Döp om
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Till spellista
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 #? LIBRARY_TREE_SAVED_DIRECTORY=
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=Bränn CD...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 spellista
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=Namn
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=Uppspelningsinställningar:
 PLAYLIST_OPTIONS_CONTINUE=Kontinuerlig
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=Blanda
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=Välj spellista (.m3u)
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=Spara spellista som...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=Spara
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 #? PLAYLIST_CANNOT_PLAY_FILE=
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 #? PLAYLIST_FILE_UNSUPPORTED=
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=Laddar anslutningsfönster...
 SPLASH_STATUS_STATISTICS_WINDOW=Laddar statistikfönster...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=Laddar statusfönster...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=Laddar spellistasfönster...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=Laddar menyer...
