--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -700,7 +700,7 @@ SEARCH_FILTER_OPTIONS=\u9009\u9879
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=\u9884\u89c8
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview The Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
 #? DOWNLOAD_LAUNCH_BUTTON_TIP=
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=\u53d6\u6d88 \u4e0b\u8f7d
@@ -739,9 +739,9 @@ LIBRARY_REFRESH_BUTTON_TIP=\u5237\u65b0 \u5171\u4eab \u76ee\u5f55.
 #? LIBRARY_EXPLORE_BUTTON_LABEL=
 #### LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
 #? LIBRARY_EXPLORE_BUTTON_TIP=
-#### LIBRARY_PLAYLIST_BUTTON_LABEL=To PlayList
+#### LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_LABEL=\u6dfb\u52a0 \u5230 \u64ad\u653e\u5217\u8868
-#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the PlayList
+#### LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_PLAYLIST_BUTTON_TIP=\u6dfb\u52a0 \u9009\u4e2d\u7684 \u6587\u4ef6 \u5230 \u64ad\u653e\u5217\u8868.
 #### LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_LABEL=\u6ce8\u91ca...
@@ -749,22 +749,22 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=\u6ce8\u91ca...
 LIBRARY_ANNOTATE_BUTTON_TIP=\u6240 \u9009 \u6587\u4ef6\u7684 \u6ce8\u91ca.
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=\u6062\u590d \u4e0b\u8f7d
-#### LIBRARY_RESUME_BUTTON_TIP=Continue downloading selected incomplete file
+#### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u91cd\u65b0 \u5c1d\u8bd5 \u4e0b\u8f7d.
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u6253\u5f00...
-#### PLAYLIST_LOAD_BUTTON_TIP=Open a new or existing PlayList
+#### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
 PLAYLIST_LOAD_BUTTON_TIP=\u6253\u5f00 \u4e00\u4e2a \u65b0\u7684 \u5b58\u5728\u7684 \u64ad\u653e\u5217\u8868.
-#### PLAYLIST_SAVE_BUTTON_LABEL=Save...
+#### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=\u4fdd\u5b58...
-#### PLAYLIST_SAVE_BUTTON_TIP=Save the current PlayList
+#### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
 PLAYLIST_SAVE_BUTTON_TIP=\u4fdd\u5b58 \u5f53\u524d\u7684 \u64ad\u653e\u5217\u8868.
 #### PLAYLIST_DELETE_BUTTON_LABEL=Remove
 PLAYLIST_DELETE_BUTTON_LABEL=\u5220\u9664
-#### PLAYLIST_DELETE_BUTTON_TIP=Remove selected file from PlayList
+#### PLAYLIST_DELETE_BUTTON_TIP=Remove Selected File from Play List
 PLAYLIST_DELETE_BUTTON_TIP=\u4ece \u64ad\u653e\u5217\u8868\u4e2d \u5220\u9664 \u9009\u4e2d\u7684 \u6587\u4ef6.
-#### PLAYLIST_FILE_DESCRIPTION=PlayList Files (*.m3u)
+#### PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 PLAYLIST_FILE_DESCRIPTION=\u64ad\u653e\u5217\u8868 \u6587\u4ef6 (*.m3u)
 
 ################################################################################
@@ -778,9 +778,9 @@ MEDIA_PLAY_BUTTON_TIP=\u64ad\u653e
 MEDIA_PAUSE_BUTTON_TIP=\u505c\u7559
 #### MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_STOP_BUTTON_TIP=\u505c\u6b62
-#### MEDIA_FORWARD_BUTTON_TIP=Forward
+#### MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_FORWARD_BUTTON_TIP=\u524d\u8fdb
-#### MEDIA_REWIND_BUTTON_TIP=Rewind
+#### MEDIA_REWIND_BUTTON_TIP=Previous
 MEDIA_REWIND_BUTTON_TIP=\u540e\u9000
 
 #anu added
@@ -1093,11 +1093,11 @@ CV_COLUMN_QRP_FULL=QRP (%/\u5927\u5c0f)
 #? CV_COLUMN_QRP_USED=
 #### CV_BUTTON_REMOVE=Remove
 CV_BUTTON_REMOVE=\u5220\u9664
-#### CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
+#### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=\u5220\u9664 \u9009\u4e2d\u7684 \u8fde\u63a5.
 #### CV_BUTTON_ADD=Add
 CV_BUTTON_ADD=\u6dfb\u52a0
-#### CV_BUTTON_TOOLTIP_ADD=Create a new outgoing connection
+#### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=\u4ea7\u751f \u4e00\u4e2a \u65b0\u7684 \u4f20\u51fa \u8fde\u63a5.
 #### CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_BEGIN=\u5927\u7ea6\u4fdd\u6301
@@ -1165,7 +1165,7 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=\u65b0\u5efa \u6587\u4ef6\u5939
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=\u505c\u6b62 \u5171\u4eab
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=\u91cd\u547d\u540d
-#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To PlayList
+#### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=\u6dfb\u52a0\u5230 \u64ad\u653e\u5217\u8868
 #### LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 #? LIBRARY_TREE_SAVED_DIRECTORY=
@@ -1181,7 +1181,7 @@ LIBRARY_BURN_LABEL=\u523b\u5f55 CD...
 ###################################################################
 # Key/value pairs for PlayListGUI
 ###################################################################
-#### PLAYLIST_TITLE=MP3 PlayList
+#### PLAYLIST_TITLE=MP3 Play List
 PLAYLIST_TITLE=MP3 \u64ad\u653e\u5217\u8868
 #### PLAYLIST_TABLE_NAME=Name
 PLAYLIST_TABLE_NAME=\u540d\u79f0
@@ -1195,13 +1195,13 @@ PLAYLIST_OPTIONS_STRING=\u64ad\u653e \u9009\u9879:
 PLAYLIST_OPTIONS_CONTINUE=\u8fde\u7eed
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=\u8df3\u8dc3
-#### PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
+#### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=\u9009\u62e9 \u64ad\u653e\u5217\u8868 (.m3u)
-#### PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
+#### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=\u4fdd\u5b58 \u64ad\u653e\u5217\u8868 \u5230...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=\u4fdd\u5b58
-#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
+#### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
 #? PLAYLIST_CANNOT_PLAY_FILE=
 #### PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
 #? PLAYLIST_FILE_UNSUPPORTED=
@@ -1513,7 +1513,7 @@ SPLASH_STATUS_CONNECTION_WINDOW=\u52a0\u8f7d \u8fde\u63a5 \u7a97\u53e3...
 SPLASH_STATUS_STATISTICS_WINDOW=\u52a0\u8f7d \u7edf\u8ba1 \u7a97\u53e3...
 #### SPLASH_STATUS_STATUS_WINDOW=Loading status window...
 SPLASH_STATUS_STATUS_WINDOW=\u52a0\u8f7d \u72b6\u6001 \u7a97\u53e3...
-#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading playlist window...
+#### SPLASH_STATUS_PLAYLIST_WINDOW=Loading play list window...
 SPLASH_STATUS_PLAYLIST_WINDOW=\u52a0\u8f7d \u64ad\u653e\u5217\u8868 \u7a97\u53e3...
 #### SPLASH_STATUS_MENUS=Loading menus...
 SPLASH_STATUS_MENUS=\u52a0\u8f7d \u83dc\u5355...
